--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,8 +1,10 @@
 .page {
   min-height: 100vh;
   min-height: 100dvh;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   h1 {
     font-size: 24px;
