--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,18 @@
 .page {
   min-height: 100vh;
   min-height: 100dvh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  max-width: 80ch;
+  padding: 24px;
+  margin-inline: auto;
 
   h1 {
     font-size: 24px;
+    margin-block-end: 12px;
+  }
+
+  a {
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
