--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,12 +2,12 @@
   min-height: 100vh;
   min-height: 100dvh;
   max-width: 80ch;
-  padding: 24px;
+  padding: 1.5rem;
   margin-inline: auto;
 
   h1 {
-    font-size: 24px;
-    margin-block-end: 12px;
+    font-size: 1.5rem;
+    margin-block-end: .75rem;
   }
 
   a {
